<resources>
    <string name="app_name">PopularMovies</string>
    <!--labels for sort order-->
    <string name="most_popular_label">Most Popular</string>
    <string name="top_rated_label">Top Rated</string>
    <string name="favorite_label">Favourites</string>

    <string name="sort_order">Sort</string>
    <string name="sort_key" translatable="false">sort</string>
    <!-- value for sort order -->
    <string name="most_popular_value">popular</string>
    <string name="top_rated_value">top</string>
    <string name="favorite_value">favorite</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_date">Release Date</string>
    <string name="synopsis">Synopsis</string>
    <string name="user_rating">User Rating</string>
    <string name="title">Movie Title</string>
    <string name="settings">Settings</string>

    <string name="isFavourite">Is Favorite?</string>
    <string name="review">Reviews ▼</string>
    <string name="review_text">Review Text</string>
    <string name="trailer_name">Trailer name</string>
    <string name="play_button">Play button</string>


</resources>